--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="house__name">Beautiful family house</h5>
+        <h5 class="home__name">Beautiful family house</h5>
         <div class="home__location">
           <svg>
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -131,14 +131,14 @@
           </svg>
           <p>$1,200,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-2.jpeg" alt="House 2" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="house__name">Modern Glass Villa</h5>
+        <h5 class="home__name">Modern Glass Villa</h5>
         <div class="home__location">
           <svg>
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -163,14 +163,14 @@
           </svg>
           <p>$2,750,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-3.jpeg" alt="House 3" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="house__name">Cozy Country House</h5>
+        <h5 class="home__name">Cozy Country House</h5>
         <div class="home__location">
           <svg>
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -195,14 +195,14 @@
           </svg>
           <p>$850,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-4.jpeg" alt="House 4" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="house__name">Large Rustical Villa</h5>
+        <h5 class="home__name">Large Rustical Villa</h5>
         <div class="home__location">
           <svg>
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -227,14 +227,14 @@
           </svg>
           <p>$1,950,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-5.jpeg" alt="House 5" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="house__name">Majestic Palace</h5>
+        <h5 class="home__name">Majestic Palace</h5>
         <div class="home__location">
           <svg>
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -259,14 +259,14 @@
           </svg>
           <p>$9,500,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <div class="home">
         <img src="img/house-6.jpeg" alt="House 6" class="home__img" />
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="house__name">Modern Family apartment</h5>
+        <h5 class="home__name">Modern Family apartment</h5>
         <div class="home__location">
           <svg>
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
@@ -291,7 +291,7 @@
           </svg>
           <p>$600,000</p>
         </div>
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
     <section class="gallery">Gallery</section>
