--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="img/logo.png" alt="Nexter logo" class="header__logo" />
       <h3 class="heading-3">Your own home:</h3>
       <h1 class="heading-1">Ultimate personal freedom</h1>
-      <button class="btn">View our propperties</button>
+      <button class="btn header__btn">View our propperties</button>
       <div class="header__seenon-text">Seen on</div>
       <div class="header__seenon-logos">
         <img src="img/logo-bbc.png" alt="Seen on logo 1" />
